# RenderHelp

./: CMakeLists.txt
demo/: main.cpp
include/RenderHelp/: RenderHelp.h
sample/: sample_02_texture.cpp  sample_05_model.cpp  sample_06_normal.cpp  sample_07_specular.cpp
